force-app/main/default/objects/ADP_Review__c/ADP_Review__c.object-meta.xml
<CustomObject>
    <label>ADP Review</label>
    <nameField>
        <displayFormat>ADP-R-{MM}-{000}</displayFormat>
        <label>ADP Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADP Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>