force-app/main/default/objects/ADP_Review__c/fields/Campaign_Review__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Review__c</fullName>
    <label>Campaign Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>