force-app/main/default/objects/ADP_Review__c/fields/Channel_Partner_Objectives_Review__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Objectives_Review__c</fullName>
    <label>Channel Partner Objectives Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>