force-app/main/default/objects/ADP_Review__c/fields/Giganet_Objectives_Review__c.field-meta.xml
<CustomField>
    <fullName>Giganet_Objectives_Review__c</fullName>
    <label>Giganet Objectives Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>